--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>jEtsy</title>
-		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-		<%= csrf_meta_tags %>
-	</head>
-	<body>
-		<%= render 'layouts/header' %>
-		<div class="container">
-			<%= yield %>
-		</div>
-		<%= render 'layouts/footer' %>
-	</body>
+    <head>
+      <title>jEtsy</title>
+      <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+      <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+      <%= csrf_meta_tags %>
+    </head>
+    <body>
+        <%= render 'layouts/header' %>
+        <div class="container">
+          <% flash.each do |name, msg| %>
+              <% if msg.is_a?(String) %>
+                  <div class="alert alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %> alert-dismissible"
+                  <button type="button" class="close" data-dismiss="alert" aria-hidden="true"></button>
+                  <%= content_tag :div, msg, :id => "flash_#{name}" %>
+                  </div>
+              <% end %>
+            <% end %>
+            <%= yield %>
+        </div>
+        <%= render 'layouts/footer' %>
+    </body>
 </html>
