--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -3,15 +3,16 @@
     <% @listings.each do |listing| %>
         <div class="col-lg-4 col-md-4">
           <div class="thumbnail">
-            <%= image_tag listing.image.url(:medium) %>
+            <%= link_to image_tag(listing.image.url), listing %>
             <div class="caption">
               <h3><%= listing.name %></h3>
               <p><%= listing.description %></p>
               <p><%= number_to_currency(listing.price, :locale => :en) %></p>
               <p><%= "Sold by #{listing.user.name}" %> </p>
-              <%= link_to 'Show', listing, class: "btn btn-link" %>
-              <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-              <%= link_to 'Destroy', listing, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-link" %>
+              <% if (user_signed_in?) && (current_user == listing.user) %>
+                <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
+                <%= link_to 'Destroy', listing, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-link" %>
+              <% end %>
             </div>
           </div>
         </div>
@@ -19,5 +20,6 @@
   </div>
 </div>
 <br>
-
-<%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+<% if user_signed_in? %>
+    <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+<% end %>
