--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <div class="row">
   <div class="col-md-6">
     <div class="thumbnail">
@@ -14,5 +13,6 @@
 
 <% if  current_user == @listing.user %>
     <%= link_to 'Edit', edit_listing_path(@listing), class: "btn btn-link" %> |
+    <%= link_to 'Destroy', @listing, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-link" %> |
 <% end %>
 <%= link_to 'Back', listings_path, class: "btn btn-link" %>
