--- a/app/views/listings/seller.html.erb
+++ b/app/views/listings/seller.html.erb
@@ -1,22 +1,32 @@
 <div class="center">
-  <div class="row">
+  <table class="table table-striped table-bordered">
+    <tr>
+      <th class="center">Image</th>
+      <th class="center">Name</th>
+      <th class="center">Description</th>
+      <th class="center">Price</th>
+      <th class="center">Action</th>
+    </tr>
     <% @listings.each do |listing| %>
-        <div class="col-lg-4 col-md-4">
-          <div class="thumbnail">
-            <%= link_to image_tag(listing.image.url), listing %>
-            <div class="caption">
-              <h3><%= listing.name %></h3>
-              <p><%= listing.description %></p>
-              <p><%= number_to_currency(listing.price, :locale => :en) %></p>
-              <p><%= "Sold by #{listing.user.name}" %> </p>
-              <% if (user_signed_in?) && (current_user == listing.user) %>
-                  <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-                  <%= link_to 'Destroy', listing, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-link" %>
-              <% end %>
+        <tr>
+          <td><%= image_tag listing.image.url(:thumb) %> </td>
+          <td><%= listing.name %></td>
+          <td><%= listing.description %></td>
+          <td><%= number_to_currency(listing.price, :locale => :en) %></td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                Options <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to 'View', listing, class: "btn btn-link" %></li>
+                <li><%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %></li>
+                <li class="divider"></li>
+                <li><%= link_to 'Destroy', listing, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-link" %></li>
+              </ul>
             </div>
-          </div>
-        </div>
+          </td>
+        </tr>
     <% end %>
-  </div>
+  </table>
 </div>
-<br>
