Added temporary jumbotron to index and about pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="jumbotron">
+  <h1>Buy & Sell</h1>
+  <h2>An online trading platform for the Jacobs community</h2>
+</div>
