--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -49,3 +49,11 @@ body{
     font-size: 18px;
   }
 }
+
+.jumbotron{
+  background-image: url('https://dl.dropboxusercontent.com/s/0p5rnk675bsxn7i/jumbotron.png');
+  h1,h2{
+    font-family: guardian-egyptt, guardian-egyptt, georgia, serif;
+    font-color: #BFBFBF;
+  }
+}
