--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,3 +1,7 @@
+<div class="jumbotron">
+  <h1>Buy & Sell</h1>
+  <h2>An online trading platform<br> for the Jacobs community</h2>
+</div>
 <div class="center">
   <div class="row">
     <% @listings.each do |listing| %>
@@ -9,10 +13,6 @@
               <p><%= listing.description %></p>
               <p><%= number_to_currency(listing.price, :locale => :en) %></p>
               <p><%= "Sold by #{listing.user.name}" %> </p>
-              <% if (user_signed_in?) && (current_user == listing.user) %>
-                <%= link_to 'Edit', edit_listing_path(listing), class: "btn btn-link" %>
-                <%= link_to 'Destroy', listing, method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-link" %>
-              <% end %>
             </div>
           </div>
         </div>
