--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -30,8 +30,10 @@
               <ul class="dropdown-menu" role="menu">
                 <li><%= link_to 'New Listing', new_listing_path %></li>
                 <li><%= link_to 'My listings', seller_path  %></li>
-                <li><%= link_to 'Change password', edit_user_registration_path  %></li>
+                <li><%= link_to 'Purchases history', purchases_path  %></li>
+                <li><%= link_to 'Sales history', sales_path  %></li>
                 <li class="divider"></li>
+                <li><%= link_to 'Modify account', edit_user_registration_path  %></li>
                 <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
               </ul>
             </li>
