--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,30 +1,65 @@
-<%= form_for([@listing, @order]) do |f| %>
-  <% if @order.errors.any? %>
-        <div id="error_explanation" class="alert alert-danger alert-dismissable">
-          <button type="button" class="close" aria-hidden="true" data-dismiss="alert"></button>
-      <h4><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h4>
-
-      <ul>
-      <% @order.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class="row">
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <%= image_tag @listing.image.url %>
+      <h3><%= @listing.name %></h3>
+      <h4><%= number_to_currency @listing.price, locale => 'en' %></h4>
     </div>
-  <% end %>
+  </div>
+  <div class="col-md-8">
+    <%= form_for([@listing, @order]) do |f| %>
+        <% if @order.errors.any? %>
+            <div id="error_explanation" class="alert alert-danger alert-dismissable">
+              <button type="button" class="close" aria-hidden="true" data-dismiss="alert"></button>
+              <h4><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h4>
 
-  <div class="form-group">
-    <%= f.label :address %>
-    <%= f.text_field :address, class: 'form-control'%>
+              <ul>
+                <% @order.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                <% end %>
+              </ul>
+            </div>
+        <% end %>
+
+        <div class="form-group">
+          <%= f.label :address %>
+          <%= f.text_field :address, class: 'form-control'%>
+        </div>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-md-6">
+              <%= f.label :city %>
+              <%= f.text_field :city, class: 'form-control' %>
+            </div>
+            <div class="col-md-6">
+              <%= f.label :state %>
+              <%= f.text_field :state, class: 'form-control' %>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="row">
+            <div class="col-md-6">
+              <%= label_tag :card_number, 'Credit card number' %>
+              <%= text_field_tag :card_number, nil, {:name => nil, :'data-stripe' => 'number', class: 'form-control'}%>
+            </div>
+            <div class="col-md-2">
+              <%= label_tag :card_code, 'CVC' %>
+              <%= text_field_tag :card_code, nil, {:name => nil, :'data-stripe' => 'cvc', class: 'form-control'}%>
+            </div>
+            <div class="col-md-2">
+              <%= label_tag nil, 'Exp. month' %>
+              <%= select_month nil, {use_two_digit_numbers: true}, {:name => nil, :'data-stripe' => 'exp-month', class: 'form-control'} %>
+            </div>
+            <div class="col-md-2">
+              <%= label_tag nil, 'Exp. year' %>
+              <%= select_year nil, {start_year: Date.today.year, end_year: Date.today.year + 20}, {:name => nil, :'data-stripe' => 'exp-year', class: 'form-control'} %>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.submit 'Complete order', class: 'btn btn-success'%>
+        </div>
+    <% end %>
   </div>
-  <div class="form-group">
-    <%= f.label :city %>
-    <%= f.text_field :city, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.label :state %>
-    <%= f.text_field :state, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.submit 'Complete order', class: 'btn btn-success'%>
-  </div>
-<% end %>
+</div>
