--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron jumbotron-banner">
   <h1>Buy & Sell</h1>
-  <h2>An online trading platform for the Jacobs community</h2>
+  <h2>An online trading platform<br> for the Jacobs community</h2>
 </div>
