--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<div class="jumbotron jumbotron-banner">
+  <h1>Buy & Sell</h1>
+  <h2>An online trading platform<br> for the Jacobs community</h2>
+</div>
+<h3>If you wish to contact the developer, you can find them <a href="http://sshukla.de">here</a></h3>
