--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -7,11 +7,11 @@
     </div>
   </div>
   <div class="col-md-8">
-    <%= form_for([@listing, @order]) do |f| %>
+    <%= form_for ([@listing, @order]) do |f| %>
         <% if @order.errors.any? %>
             <div id="error_explanation" class="alert alert-danger alert-dismissable">
               <button type="button" class="close" aria-hidden="true" data-dismiss="alert"></button>
-              <h4><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h4>
+              <h4><%= pluralize(@order.errors.count, 'error') %> prohibited this order from being saved:</h4>
 
               <ul>
                 <% @order.errors.full_messages.each do |message| %>
@@ -20,7 +20,9 @@
               </ul>
             </div>
         <% end %>
-
+        <div id="stripe_error" class="alert alert-danger" style="display: none">
+          <noscript>Javascript not enabled. Please enable javascript to continue.</noscript>
+        </div>
         <div class="form-group">
           <%= f.label :address %>
           <%= f.text_field :address, class: 'form-control'%>
